# druid-xml

./: Cargo.toml  README.md
designer/: druid-tag.js  index.html  style.css  worker-xml..js
druid-xml/: Cargo.toml  druid-xml.dtd  test.html  wasm_build.bat
druid-xml-example/: Cargo.toml
druid-xml-example/examples/: basic.rs  basic_style.rs  basic_style_order.rs  calc.rs  custom_widget.rs  custom_widget_native.rs  dynamic.rs  lens.rs  raw_drawable.rs  raw_style_widget.rs  sample_devtools.rs  sample_login.rs  sample_split.rs  split.rs  temp.rs  timeline.rs  transition.rs  tree_label.rs
druid-xml-macro/: Cargo.toml
druid-xml-macro/src/: lib.rs
druid-xml/examples/: split.rs  static_widget.rs
druid-xml/src/: basic_elem.rs  context.rs  css.rs  curve.rs  dynamic.rs  lib copy.rs  lib.rs  named_color.rs  qwidget.rs  simple_style.rs  writer.rs
druid-xml/src/dynamic/: color.rs  ex_custom_widget.rs  mod.rs
druid-xml/src/qwidget/: animation.rs  attrs.rs  css.rs  drawable.rs  flex.rs  mod.rs  org_widgets.rs  qwidget.rs  selector.rs  simple_calc.rs  value.rs  wrapper.rs
druid-xml/src/widget/: button.rs  checkbox.rs  input.rs  label.rs  lazy_image.rs  mod.rs  slider.rs  split.rs  stepper.rs  style_widget.rs  switch.rs  theme.rs  tree.rs  tree_label.rs
