[package]
name = "druid-xml-macro"
version = "0.1.0"
license = "MIT"
description = "derive impls for druid, a Rust UI toolkit."
repository = "https://github.com/markijohn/druid-xml"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.42", features=["full"]}
quote = "1.0.7"
proc-macro2 = "1.0.19"