[package]
name = "druid-xml"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quick-xml = "0.27.1"
simplecss = "0.2.1"
#druid = "0.7.0"
druid = {git="https://github.com/linebender/druid.git"}
serde_json = "1.0.91"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.6"